# minerva

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: sample.md
local_agent/: __init__.py  __main__.py  agent.bak  agent.py  config.py  vector_store.bak  vector_store.py
tests/: conftest.py  test_agent_complex.py  test_agent_interaction.py  test_config.py  test_content_handling.py  test_file_operations.py  test_main.py  test_vector_store.py
